Adds Banner Link as editable

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,14 +12,12 @@
 </head>
 <body>
    
-        
-
     <section class="banner">
         <div class="banner__text">
             <img class="banner__logo" src="/images/main-logo.png" alt="">
             <h1 class="banner__headline">{{ page.mainHeadline }}</h1>
             <h2 class="banner__subhead">{{ page.mainSubhead }}</h2>
-            <a href="#" class="button">Buy Your Tickets Now</a>
+            <a href="{{ page.mainLink }}" class="button">{{ page.mainLinkText }}</a>
         </div>
     </section>
     <section class="about">
