--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    
-    <section class="banner">
+    <section class="banner" style="background-image: url({{ page.mainBgImage }}), linear-gradient(75deg, #E86724 30%, #0AB54B)">
         <div class="banner__text">
             <img class="banner__logo" src="/images/main-logo.png" alt="">
             <h1 class="banner__headline">{{ page.mainHeadline }}</h1>
