--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -7,3 +7,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     margin-bottom: .5rem;
 }
+
+h3 {
+    font-size: 2rem;
+    line-height: 1.4em;
+    margin-bottom: 1rem;
+    font-weight: normal;
+}
