Adds styles for paragraphs

--- a/scss/base/_resets.scss
+++ b/scss/base/_resets.scss
@@ -16,3 +16,7 @@ img {
     object-position: center center;
     object-fit: contain;
 }
+p {
+    margin-bottom: 1.5rem;
+    line-height: 1.4em;
+}
