--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -11,6 +11,7 @@
     &__text {
         max-width: 900px;
         margin: auto;
+        text-align: center;
     }
     &__logo {
         display: block;
@@ -23,7 +24,7 @@
     &__subhead {
         font-size: 1.5rem;
         line-height: 1.3em;
-        font-weight: 300;
+        font-weight: 400;
         margin-bottom: 1.5em;
     }
 }
